--- a/templates/_aside.html.twig
+++ b/templates/_aside.html.twig
@@ -9,5 +9,7 @@
     Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.
         Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.
         Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500.</p>
-    <button class="btn btn-warning">Comentarios</button>
+    <a class="btn btn-warning" href="{{ path('comments_index') }}">
+        Comentarios
+    </a>
 </aside>
